HWR UI word recognition update

--- a/PhenoPad/CustomControl/NotePhraseControl.xaml
+++ b/PhenoPad/CustomControl/NotePhraseControl.xaml
@@ -10,7 +10,7 @@
     d:DesignWidth="400">
 
     <Grid Background="WhiteSmoke" Height="{x:Bind LINE_HEIGHT}">
-        <InkCanvas x:Name="RawStrokes" DoubleTapped="ToggleTextView" Visibility="Visible"/>
+        <InkCanvas x:Name="RawStrokes" DoubleTapped="ToggleTextView" Visibility="Collapsed"/>
         <StackPanel x:Name="RecognizedPhrase" x:FieldModifier="public" Spacing="10" VerticalAlignment="Center" Orientation="Horizontal"/>
     </Grid>
 </UserControl>
