bug fixes, stroke insert convert update

--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -113,7 +113,10 @@
                                  Visibility="Collapsed" 
                                  Width="{x:Bind COMMENT_WIDTH}"
                                  IsEnabled="False"/>
-                    </Grid>
+                    <StackPanel x:Name="ConvertPanel" Orientation="Horizontal" Visibility="Collapsed"
+                                Width="{x:Bind COMMENT_WIDTH}" HorizontalAlignment="Left" 
+                                x:FieldModifier="public"/>
+                </Grid>
                 </ScrollViewer>
             </Grid>
             
